# DevOps-Course-Starter

./: .dccache  .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  README.md  demopymongo.py  deployment.yaml  docker-compose.yml  entrypoint.sh  main.tf  outputs.tf  pyproject.toml  service.yaml  terraform.tfstate.backup  variables.tf
.github/workflows/: workflow.yml
todo_app/: app.py  flask_config.py  python.conf  todo.py  todomongo.py  trello_api_exercise.py  view_model.py
todo_app/Tests/: test_unit.py
todo_app/ansible/: ansible_playbook.yml  inventory.ini
todo_app/templates/: index.html  layout.html
todo_app/tests/: test_app.py  test_e2e.py  test_unit.py  tests_e2e.py
