[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.14.0"
requests = "^2.28.1"
gunicorn = "^20.1.0"
pymongo = "^4.2.0"
mongomock = "^4.1.2"
Flask-Login = "^0.6.2"
Flask = "^2.2.2"
certifi = "^2022.12.7"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
watchdog = "^2.1.8"
selenium = "^4.3.0"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
